compiler/tests/errortests/arithmetic/arithmetic-leading-minus.txt
FILENAME:2:21: error: expected a right hand side after a '-'!
    let a : i32 = - ;
                    ^
